# UMT_Hackathon_prep

./: .gitignore  AI_Engineering_Guidebook.md  Guide_Book.md  Hacthathon_Guide_Book.md  Project_prompt.md  Sample Project 1.md  Sample Project 2.md
Python/Core Foundations/: 01_object_references_and_copying.py  02_variables_as_tags_and_mutability.py  03_pythonic_design_and_pass_by_object_reference.py  05_generators_and_lazy_evaluation.py  07_memory_management_and_refcounts.py  all_any_demo.py  deep_dive_design.py  efficiency_test.py  gc_deep_dive.py  python_basics.py  ref_count_mystery.py  tags_vs_boxes.py  yield_vs_next.py
Python/Core_Foundations/: 03_pythonic_design_and_pass_by_object_reference.py  04_logic_and_search_patterns.py  06_memory_efficiency_comparison.py  08_garbage_collection_and_cycle_detection.py  README.md
Python/Core_Syntax/: 01_concept_proof_mutable.py  02_functions_deep_dive.py  03_control_flow_mastery.py  (+1 more)
Sample Project Walkthroughs/: LegalMind_AI_Guide.md
end-to-end_project_3/: .env.example  README.md  config.py  demo.py  pyproject.toml
end-to-end_project_3/data/: sample_contract.txt
end-to-end_project_3/src/: __init__.py
end-to-end_project_3/src/agents/: __init__.py  clause_analyzer.py  retriever.py  risk_assessor.py  router.py  summarizer.py
end-to-end_project_3/src/ingestion/: __init__.py  chunker.py  document_loader.py
end-to-end_project_3/src/llm/: __init__.py  client.py
end-to-end_project_3/src/orchestrator/: __init__.py  graph.py
end-to-end_project_3/src/vectorstore/: __init__.py  chroma_store.py  embedder.py
(+3 files in other folders)
